--- a/index.html
+++ b/index.html
@@ -1,15 +1,31 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proyecto Jorge Carlotto</title>
-</head>
-<body>
-    <h1>Jorge Matias Carlotto</h1>
-    <br>
-    <h2>Proyecto Calculo Aeronatico</h2>
-</body>
-<script src="./miarchivo.js"></script> 
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>App Aeronautica</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+  </head>
+  <body>
+            <!-- NAVBAR -->
+    <nav class="navbar" style="background-color: #010101;">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#" style="color:#fff">
+            <img src="https://res.cloudinary.com/ddi161cze/image/upload/v1654270815/203254304_458707422653955_4268329577981899863_n_kralay.jpg" alt="" width="90" height="90" class="d-inline-block align-text-top">
+            Estación Aerea Mar del Plata
+          </a>
+        </div>
+      </nav>
+      <br>
+      <br>
+      <!--FIN  NAVBAR -->
+    <h1>Proyecto Jorge Carlotto</h1>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    <script src="./miarchivo.js"></script> 
+  </body>
 </html>
+
+
+
+
+
