--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
         <div class="container">
           <div class="carousel-caption">
-            <h1>Planifica tu vuelo punto a punto</h1>
+            <h1 class="titleasd">Planifica tu vuelo punto a punto</h1>
             <p>Con nuestra App carga tus posiciones nosotros hacemos el resto...</p>
             <p><a class="btn btn-lg btn-primary" href="#">Probalo ahora</a></p>
           </div>
@@ -146,7 +146,7 @@
         <p>&copy; Jorge Carlotto - Curso CODER HOUSE Javascript 2022 &middot;</p>
       </footer>  
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-   <script src="./miarchivo.js"></script>
+   <script src="./miarchivo.js"></script> 
   </body>
 </html>
 
