--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <div class="carousel-caption text-start">
             <h1>Calculo de distancia entre Aeropuertos</h1>
             <p>Conoce la distancia tiempo y consumo de combustible entre los mas importantes aeropuertos del país</p>
-            <p><a class="btn btn-lg btn-primary" href="#">Probalo ahora</a></p>
+            <!--<p><a class="btn btn-lg btn-primary" href="#">Probalo ahora</a></p>-->
           </div>
         </div>
       </div>
@@ -61,7 +61,7 @@
           <div class="carousel-caption">
             <h1 class="titleasd">Planifica tu vuelo punto a punto</h1>
             <p>Con nuestra App carga tus posiciones nosotros hacemos el resto...</p>
-            <p><a class="btn btn-lg btn-primary" href="#">Probalo ahora</a></p>
+            <!--<p><a class="btn btn-lg btn-primary" href="#">Probalo ahora</a></p>-->
           </div>
         </div>
       </div>
@@ -72,7 +72,7 @@
           <div class="carousel-caption text-start">
             <h1>Aeroplantas de Combustible</h1>
             <p >Conoce las ultimas novedades y el precio actualizado del servicio de combustible</p>
-            <p><a class="btn btn-lg btn-primary" href="#">Probalo ahora</a></p>
+            <!--<p><a class="btn btn-lg btn-primary" href="#">Probalo ahora</a></p>-->
           </div>
         </div>
       </div>
@@ -94,21 +94,21 @@
 
         <h2 class="fw-normal">Calculo por Puntos GPS</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui deserunt, similique asperiores explicabo sed enim sint id quia quos ad quas omnis atque ea saepe animi eius distinctio voluptatum dolores?</p>
-        <p><a class="btn btn-secondary" href="#">Comerzar &raquo;</a></p>
+        <p><a id="calculosPuntos"class="btn btn-secondary" href="#">Comerzar &raquo;</a></p>
       </div>
       <div class="col-lg-4">
         <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="https://res.cloudinary.com/ddi161cze/image/upload/v1655338335/1292324964_0_p2iwua.jpg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></img>
 
         <h2 class="fw-normal">Distancia entre Aeropuertos</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui deserunt, similique asperiores explicabo sed enim sint id quia quos ad quas omnis atque ea saepe animi eius distinctio voluptatum dolores?</p>
-        <p><a class="btn btn-secondary" href="#">Comerzar &raquo;</a></p>
+        <p><a id="disAeropuertos"  class="btn btn-secondary">Comerzar &raquo;</a></p>
       </div>
       <div class="col-lg-4">
         <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="https://res.cloudinary.com/ddi161cze/image/upload/v1655340297/download_hcqepr.png" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></img>
 
         <h2 class="fw-normal">Combustible</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui deserunt, similique asperiores explicabo sed enim sint id quia quos ad quas omnis atque ea saepe animi eius distinctio voluptatum dolores?</p>
-        <p><a class="btn btn-secondary" href="#">Comerzar &raquo;</a></p>
+        <p><a id="calculosCumbustible"  class="btn btn-secondary" href="#">Comerzar &raquo;</a></p>
       </div>
     </div>
 
@@ -146,6 +146,7 @@
         <p>&copy; Jorge Carlotto - Curso CODER HOUSE Javascript 2022 &middot;</p>
       </footer>  
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+  
    <script src="./miarchivo.js"></script> 
   </body>
 </html>
