--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>App Aeronautica</title>
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link href="styles.css" rel="stylesheet">
   </head>
@@ -101,17 +102,18 @@
 
         <h2 class="fw-normal">Distancia entre Aeropuertos</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui deserunt, similique asperiores explicabo sed enim sint id quia quos ad quas omnis atque ea saepe animi eius distinctio voluptatum dolores?</p>
-        <p><a id="disAeropuertos"  class="btn btn-secondary">Comerzar &raquo;</a></p>
+        <p><a id="disAeropuertos2"  class="btn btn-secondary">Comerzar &raquo;</a></p>
       </div>
       <div class="col-lg-4">
         <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="https://res.cloudinary.com/ddi161cze/image/upload/v1655340297/download_hcqepr.png" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></img>
 
         <h2 class="fw-normal">Combustible</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui deserunt, similique asperiores explicabo sed enim sint id quia quos ad quas omnis atque ea saepe animi eius distinctio voluptatum dolores?</p>
-        <p><a id="calculosCumbustible"  class="btn btn-secondary" href="#">Comerzar &raquo;</a></p>
+        <p><a id="calculosCumbustible"  class="btn btn-secondary" >Comerzar &raquo;</a></p>
       </div>
     </div>
-
+    <div id="dinamic"></div>
+    
 
     <hr id="noticias" class="featurette-divider">
     <div class="row featurette">
