--- a/index.html
+++ b/index.html
@@ -95,14 +95,14 @@
 
         <h2 class="fw-normal">Calculo por Puntos GPS</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui deserunt, similique asperiores explicabo sed enim sint id quia quos ad quas omnis atque ea saepe animi eius distinctio voluptatum dolores?</p>
-        <p><a id="calculosPuntos"class="btn btn-secondary" href="#">Comerzar &raquo;</a></p>
+        <p><a id="calculosPuntos"class="btn btn-secondary" >Comerzar &raquo;</a></p>
       </div>
       <div class="col-lg-4">
         <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="https://res.cloudinary.com/ddi161cze/image/upload/v1655338335/1292324964_0_p2iwua.jpg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></img>
 
         <h2 class="fw-normal">Distancia entre Aeropuertos</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui deserunt, similique asperiores explicabo sed enim sint id quia quos ad quas omnis atque ea saepe animi eius distinctio voluptatum dolores?</p>
-        <p><a id="disAeropuertos2"  class="btn btn-secondary">Comerzar &raquo;</a></p>
+        <p><a id="disAeropuertos2" href="http://127.0.0.1:5500/distAirport.html"  class="btn btn-secondary">Comerzar &raquo;</a></p>
       </div>
       <div class="col-lg-4">
         <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="https://res.cloudinary.com/ddi161cze/image/upload/v1655340297/download_hcqepr.png" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></img>
@@ -114,6 +114,7 @@
     </div>
     <div id="dinamic"></div>
     
+  
 
     <hr id="noticias" class="featurette-divider">
     <div class="row featurette">
@@ -144,8 +145,9 @@
 
 </main>
       <footer class="container">
-        <p class="float-end"><a href="#">Back to top</a></p>
-        <p>&copy; Jorge Carlotto - Curso CODER HOUSE Javascript 2022 &middot;</p>
+       
+        <p><a class="btn btn-secondary float-end" href="#">Volver Arriba</a></p>
+        <p>&copy; Jorge Carlotto 👨‍💻 - Curso CODER HOUSE Javascript 2022 &middot;</p>
       </footer>  
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
   
