refactorización de formulas para pasar a decimales. Ver punto en google maps Ok

--- a/distEntrePuntos.html
+++ b/distEntrePuntos.html
@@ -54,18 +54,22 @@
               <li class="list-group-item d-flex justify-content-between lh-sm">
                 <div>
                   <h6 class="my-0">Posición UNO</h6>
-                  <small id="postUnoLartText" class="text-muted">Latitud : 45° 24° 11°</small>
+                  <small id="postUnoLartText" class="text-muted"></small>
                   <br>
-                  <small id="postUnoLongText" class="text-muted">Longitud: 45° 24° 11°</small>
+                  <small id="postUnoLongText" class="text-muted"></small>
+                  <br>
+                  <small id="verMapaPostUno" class="text-muted"></small>
                 </div>
                 
               </li>
               <li class="list-group-item d-flex justify-content-between lh-sm">
                 <div>
                   <h6 class="my-0">Posición DOS</h6>
-                  <small id="postDosLartText" class="text-muted">Latitud : 45° 24° 11°</small>
+                  <small id="postDosLartText" class="text-muted"></small>
                   <br>
-                  <small id="postDosLongText" class="text-muted">Longitud: 45° 24° 11°</small>
+                  <small id="postDosLongText" class="text-muted"></small>
+                  <br>
+                  <small id="verMapaPostDos" class="text-muted"></small>
                 </div>
               </li>
 
