--- a/login.html
+++ b/login.html
@@ -15,25 +15,30 @@
             <h1 class="h3 mb-3 fw-normal">The PilotBag te da la Bienvenida</h1>
       
           <div class="form-floating">
-            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-            <label for="floatingInput">Correo Electronico</label>
+            <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com">
+            <label for="floatingInput">Usuario</label>
           </div>
           <div class="form-floating">
             <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
             <label for="floatingPassword">Contraseña</label>
           </div>
           <div>
-            <small class="text-muted"><a href="#" target="_blank">¿No tenes cuenta? Registrate aquí</a></small>
+            <h3 id="textoDeIngreso" class="h3 mb-3 fw-normal text-success"></h3>
+            <h3 id="textoDeIngresoFail" class="h3 mb-3 fw-normal text-danger"></h3>
+          </div>
+
+          <div>
+            <small class="text-muted"><a href="http://127.0.0.1:5500/registro.html" target="_blank">¿No tenes cuenta? Registrate aquí</a></small>
           </div>
       <br>
           <button class="w-100 btn btn-lg btn-primary" type="submit">Entrar</button>
 
-          <p>&copy; Jorge Carlotto 👨‍💻 - Curso CODER HOUSE JS 2022 &middot;</p>
+          <p>&copy; Jorge Carlotto 👨‍💻  &middot;</p>
         </form>
       </main>
       
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
   
-   <script src="./miarchivo.js"></script> 
+   <script src="./Js/login.js"></script> 
   </body>
 </html>
