spiner y settime Ok

--- a/distEntrePuntos.html
+++ b/distEntrePuntos.html
@@ -115,7 +115,7 @@
                   </div>
                 </div>
 
-                <h4 class="mb-3">Longitud</h4>
+                <h4 class="mb-3">Longitud UNO</h4>
 
                 <div class="col-sm-2">
                   <label for="firstName" class="form-label">Grados</label>
@@ -140,7 +140,7 @@
                   </div>
                 </div>
 
-                <h4 class="mb-3">Latitud </h4>
+                <h4 class="mb-3">Latitud DOS </h4>
                 <div class="col-sm-2">
                   <label for="firstName" class="form-label">Grados</label>
                   <input type="text" class="form-control" id="firstName" placeholder="" value="" required>
@@ -165,7 +165,7 @@
                   </div>
                 </div>
 
-                <h4 class="mb-3">Longitud</h4>
+                <h4 class="mb-3">Longitud DOS</h4>
 
                 <div class="col-sm-2">
                   <label for="firstName" class="form-label">Grados</label>
