--- a/registro.html
+++ b/registro.html
@@ -26,9 +26,10 @@
             <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
             <label for="floatingPassword">Contraseña</label>
           </div>
-          <!-- <div>
-            <small class="text-muted"><a href="#" target="_blank"></a></small>
-          </div> -->
+          <div>
+            <h3 id="textoDeRegistro" class="h3 mb-3 fw-normal text-success"></h3>
+          </div>
+          <div id="spiner"></div>
       <br>
           <button class="w-100 btn btn-lg btn-primary" type="submit">Registrarse</button>
 
