--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
             <h3 id="textoDeIngreso" class="h3 mb-3 fw-normal text-success"></h3>
             <h3 id="textoDeIngresoFail" class="h3 mb-3 fw-normal text-danger"></h3>
           </div>
-
+          <div id="spiner"></div>
           <div>
             <small class="text-muted"><a href="http://127.0.0.1:5500/registro.html" target="_blank">¿No tenes cuenta? Registrate aquí</a></small>
           </div>
