vista plantas combustible ok

--- a/distAirport.html
+++ b/distAirport.html
@@ -69,7 +69,7 @@
       <div id="resultadoDistAirport"></div>
     </div>
 </main>
-      <footer class="container">
+<footer class="container fixed-bottom">
         <br>
       <p>&copy; Jorge Carlotto 👨‍💻  - Curso CODER HOUSE Javascript 2022 &middot;</p>
       </footer>  
