--- a/main.html
+++ b/main.html
@@ -109,7 +109,7 @@
 
         <h2 class="fw-normal">Combustible</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui deserunt, similique asperiores explicabo sed enim sint id quia quos ad quas omnis atque ea saepe animi eius distinctio voluptatum dolores?</p>
-        <p><a id="calculosCumbustible"  class="btn btn-secondary" >Comerzar &raquo;</a></p>
+        <p><a id="calculosCumbustible" href="http://127.0.0.1:5500/plantasCombu.html"  class="btn btn-secondary" >Comerzar &raquo;</a></p>
       </div>
     </div>
     <div id="dinamic"></div>
