--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <br>
           <button class="w-100 btn btn-lg btn-primary" type="submit">Entrar</button>
 
-          <p>&copy; Jorge Carlotto 👨‍💻  &middot;</p>
+          <p class="text-dark">&copy; Jorge Carlotto 👨‍💻</p>
         </form>
       </main>
       
