--- a/distAirport.html
+++ b/distAirport.html
@@ -71,7 +71,7 @@
 </main>
 <footer class="container fixed-bottom">
         <br>
-      <p>&copy; Jorge Carlotto 👨‍💻  - Curso CODER HOUSE Javascript 2022 &middot;</p>
+      <p>&copy; Jorge Carlotto 👨‍💻  - Curso CODER HOUSE Javascript 2022 </p>
       </footer>  
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
   
