--- a/registro.html
+++ b/registro.html
@@ -33,7 +33,7 @@
       <br>
           <button class="w-100 btn btn-lg btn-primary" type="submit">Registrarse</button>
 
-          <p>&copy; Jorge Carlotto 👨‍💻 &middot;</p>
+          <p>&copy; Jorge Carlotto 👨‍💻</p>
         </form>
       </main>
       
