combustible ubicación ok

--- a/plantasCombu.html
+++ b/plantasCombu.html
@@ -48,6 +48,7 @@
                 <th style="width: 22%;">AeroNafta</th>
                 <th style="width: 22%;">JetA1</th>
                 <th style="width: 22%;">Contacto</th>
+                <th style="width: 22%;">Ubicación</th>
               </tr>
             </thead>
 
