--- a/main.html
+++ b/main.html
@@ -33,6 +33,10 @@
               <li class="nav-item">
                 <a class="nav-link" href="#noticias">Noticias</a> 
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="http://127.0.0.1:5500/aboutUs.html">AboutUs</a> 
+              </li>
+
             </ul>
           </div>
         </div>
