--- a/main.html
+++ b/main.html
@@ -131,8 +131,8 @@
 
       <div class="col-md-5">
         <div class="col">
-          <div class="card mb-4 rounded-3 shadow-sm border-primary">
-            <div class="card-header py-3 text-white bg-primary border-primary">
+          <div class="card mb-4 rounded-3 shadow-sm border-secondary">
+            <div class="card-header py-3 text-white bg-secondary border-secondary">
               <h4 class="my-0 fw-normal">Consulta el Clima 🌦</h4>
             </div>
             <div class="card-body">
@@ -158,7 +158,7 @@
                 </select>
                 <br>
                 <br>
-                <button type="submit" class="w-100 btn btn-lg btn-primary">Ver Clima</button>
+                <button type="submit" class="w-100 btn btn-lg btn-secondary">Ver Clima</button>
               
             </form>
             </div>
