styles and README

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -47,7 +47,8 @@
 
         <a href="https://www.instagram.com/jor_carlotto/" class="fa fa-instagram"></a>
         <a href="https://www.linkedin.com/in/jorge-matias-carlotto-68aa36212/" class="fa fa-linkedin"></a>
-        <a href="mailto:jorgemcarlotto@gmail.com" class="fa fa fa-google"></a>
+        <a href="mailto:jorgemcarlotto@gmail.com" class="fa fa-envelope"></a>
+        
         
     </div>
     <div class="col-md-5">
