--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div id="spiner"></div>
         <div>
           <small class="text-muted"
-            ><a href="http://127.0.0.1:5500/registro.html" target="_blank"
+            ><a href="http://127.0.0.1:5500/register.html" target="_blank"
               >¿No tenes cuenta? Registrate aquí</a
             ></small
           >
