--- a/main.html
+++ b/main.html
@@ -102,7 +102,7 @@
 
         <h2 class="fw-normal">Calculo por Puntos GPS</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui deserunt, similique asperiores explicabo sed enim sint id quia quos ad quas omnis atque ea saepe animi eius distinctio voluptatum dolores?</p>
-        <p><a href="http://127.0.0.1:5500/distEntrePuntos.html" class="btn btn-secondary" >Comerzar &raquo;</a></p>
+        <p><a href="http://127.0.0.1:5500/pointToPoint.html" class="btn btn-secondary" >Comerzar &raquo;</a></p>
       </div>
       <div class="col-lg-4">
         <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="https://res.cloudinary.com/ddi161cze/image/upload/v1655338335/1292324964_0_p2iwua.jpg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></img>
@@ -116,7 +116,7 @@
 
         <h2 class="fw-normal">Combustible</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui deserunt, similique asperiores explicabo sed enim sint id quia quos ad quas omnis atque ea saepe animi eius distinctio voluptatum dolores?</p>
-        <p><a id="calculosCumbustible" href="http://127.0.0.1:5500/plantasCombu.html"  class="btn btn-secondary" >Comerzar &raquo;</a></p>
+        <p><a id="calculosCumbustible" href="http://127.0.0.1:5500/fuelPlants.html"  class="btn btn-secondary" >Comerzar &raquo;</a></p>
       </div>
     </div>
     
