--- a/register.html
+++ b/register.html
@@ -74,7 +74,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="./Js/registro.js"></script>
+    <script src="./Js/register.js"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   </body>
 </html>
