--- a/main.html
+++ b/main.html
@@ -109,7 +109,7 @@
 
         <h2 class="fw-normal">Distancia entre Aeropuertos</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui deserunt, similique asperiores explicabo sed enim sint id quia quos ad quas omnis atque ea saepe animi eius distinctio voluptatum dolores?</p>
-        <p><a id="disAeropuertos2" href="http://127.0.0.1:5500/distAirport.html"  class="btn btn-secondary">Comerzar &raquo;</a></p>
+        <p><a id="disAeropuertos2" href="http://127.0.0.1:5500/airportDistance.html"  class="btn btn-secondary">Comerzar &raquo;</a></p>
       </div>
       <div class="col-lg-4">
         <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="https://res.cloudinary.com/ddi161cze/image/upload/v1655340297/download_hcqepr.png" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></img>
